--- a/project-name/Jenkinsfile
+++ b/project-name/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
 
                 npm install
 
-                npm run build
+                sh 'npm run build'
 
             }
 
@@ -26,7 +26,7 @@ pipeline {
 
                 echo 'Testing..'
 
-                npm run test:e2e
+                sh 'npm run test:e2e'
 
             }
 
