--- a/project-name/Jenkinsfile
+++ b/project-name/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
         stage('install') {
             steps {
                 echo 'Installing...'
-                npm install
+                sh 'npm install'
             }
         }
 
