--- a/project-name/Jenkinsfile
+++ b/project-name/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
 
         stage('install') {
             steps {
-                cd project-name
+                cd './project-name'
                 echo 'Installing...'
                 sh 'npm install'
             }
