--- a/project-name/Jenkinsfile
+++ b/project-name/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
         stage('install') {
             steps {
                 echo 'Installing...'
-                sh 'npm install'
+                sh 'cd project-name/ && npm install'
             }
         }
 
