--- a/project-name/Jenkinsfile
+++ b/project-name/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
 
                 echo 'Building..'
 
-                sh 'npm run build'
+                sh 'cd project-name/ && npm run build'
             }
 
         }
@@ -30,7 +30,7 @@ pipeline {
 
                 echo 'Testing..'
 
-                sh 'npm run test:e2e'
+                sh 'cd project-name/ && npm run test:e2e'
 
             }
 
@@ -42,7 +42,7 @@ pipeline {
 
                 echo 'Deploying....'
 
-                sh 'npm run start:prod'
+                sh 'cd project-name/ && npm run start:prod'
 
             }
 
